# atlasPA

./: .gitignore  CLAUDE.md  Makefile  README.md  gateway.py  main.py  paths.py  pyproject.toml
.claude/: settings.local.json
brain/: __init__.py  compactor.py  dspy_adapter.py  engine.py  status.py  tools.py
channels/: __init__.py  base.py  transcribe.py
channels/cli/: __init__.py  bot.py
channels/discord/: __init__.py  bot.py
channels/telegram/: __init__.py  bot.py  formatting.py  transcribe.py
channels/web/: __init__.py  bot.py
config/: .env.example
heartbeat/: __init__.py  awareness.py  jobs.py  maintenance.py  scheduler.py  updater.py
logviewer/: index.html  server.py
memory/: __init__.py  embedder.py  embedding_cache.py  history.py  retriever.py  soul.md  store.py  summariser.py
providers/: __init__.py  anthropic_provider.py  base.py  logging_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  settings.py
skills/: __init__.py  registry.py
skills/browser/: SKILL.md  sessions.py  tool.py
skills/code_runner/: SKILL.md  tool.py
skills/file_ops/: SKILL.md  tool.py
skills/google_calendar/: SKILL.md  tool.py
skills/http_request/: SKILL.md  tool.py
skills/self_inspect/: SKILL.md  (+1 more)
tests/: __init__.py  conftest.py  test_brain.py  test_channels.py  test_context_compaction.py  test_dspy_engine.py  test_engine.py  test_formatting.py  test_google_calendar.py  test_heartbeat.py  test_maintenance.py  test_phase6.py  test_skill_manager.py  test_skills.py  test_streaming.py  test_voice.py
transcribe_server/: server.py
(+7 files in other folders)
