[project]
name = "atlas"
version = "0.1.0"
description = "Personal AI agent — model-agnostic, extensible, runs locally"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ddgs>=9.11.2",
    "playwright>=1.58.0",
    "apscheduler>=3.10,<4",
    "discord.py>=2.3",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "httpx>=0.27",
    "typer[all]>=0.12",
    "google-api-python-client>=2.120",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "pydub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
